Kubernetes/drupal.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
spec:
  selector:
      app: drupal
  ports:
    - protocol: TCP
      port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
spec:
  selector:
    matchLabels:
      app: drupal
  replicas: 1
  template:
    metadata:
      labels:
        app: drupal
        ID: "drupal_service_id"
    spec:
      containers:
      - name: drupal
        image: drupal_image_name
        imagePullPolicy: Always
        command: []
        stdin: true
        tty: true
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /opt/drupal
          name: drupal-data
        - mountPath: /var/www/private_files
          name: private-files
      imagePullSecrets:
      - name: github
      volumes:
          - name: drupal-data
            persistentVolumeClaim:
              claimName: drupal-data
          - name: private-files
            persistentVolumeClaim:
              claimName: private-files

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drupal
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'  
spec:
  rules:
    - host: drupal_public_url
      http:
        paths:
          - backend:
              service:
                name: drupal
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - drupal_public_url
      secretName: drupal_public_url
