Kubernetes/graphdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphdb
spec:
  selector:
      app: graphdb
  ports:
    - protocol: TCP
      port: 7200

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphdb
spec:
  selector:
    matchLabels:
      app: graphdb
  replicas: 1
  template:
    metadata:
      labels:
        app: graphdb
        ID: "graphdb_service_id"
    spec:
      containers:
      - name: graphdb
        image: ontotext/graphdb:10.3.3
        imagePullPolicy: Always
        command: []
        resources:
          limits:
            memory: 16000Mi
        stdin: true
        tty: true
        ports:
        - containerPort: 7200
        volumeMounts:
        - mountPath: /opt/graphdb/home
          name: graphdb-home
      imagePullSecrets:
      - name: github
      volumes:
        - name: graphdb-home
          persistentVolumeClaim:
            claimName: graphdb-home


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphdb
  annotations: 
    cert-manager.io/cluster-issuer: acdh-prod
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'  
spec:
  rules:
    - host: graphdb_public_url
      http:
        paths:
          - backend:
              service:
                name: graphdb
                port:
                  number: 7200
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - graphdb_public_url
      secretName: graphdb_public_url
